# roth-cli

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-04-01-cli-rewrite.md
scripts/: generate_fixtures.py
src/rothos/: __init__.py  cli.py  engine.py  output.py  pdf.py  sanitize.py
src/rothos/parsers/: __init__.py  base.py  classifier.py  irs_transcript.py
tests/: test_classifier.py  test_cli.py  test_engine.py  test_gap_detection.py  test_integration.py  test_irs_transcript_parser.py  test_output.py  test_pdf.py  test_sanitize.py
